# ClothSimulation

./: .gitignore  CMakeLists.txt
include/: config.hpp  renderer.hpp  wind.hpp
include/engine/: window_context_handler.hpp
include/engine/common/: array.hpp  event_manager.hpp  grid.hpp  index_vector.hpp  math.hpp  number_generator.hpp  profiler.hpp  racc.hpp  utils.hpp  vec.hpp
include/engine/physics/: constraints.hpp  particle.hpp  physics.hpp
include/engine/render/: viewport_handler.hpp
src/: config.cpp  main.cpp
test/0-config/: basic.json  wind.json
